# semantic-kernel-practice

./: .env_example  README.md  kernel-function.py  loggers.py  main.py  pyproject.toml  requirements.txt  ruff.toml  semantic-function.py
sk_plugin/: kernel_plugins.py
sk_plugin/semantic_plugins/Serializer/JSON/: config.json  skprompt.txt
sk_plugin/semantic_plugins/Serializer/XML/: config.json  skprompt.txt
