[tool.poetry]
name = "sk-practice"
version = "0.1.0"
description = ""
authors = ["c8763yee"]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
# semantic-kernel = "^1.1.1"
semantic-kernel = { version = "^1.1.1", extras = ["all"] }
ipykernel = "^6.29.4"
yt-dlp = "^2024.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
